--- a/css/master.css
+++ b/css/master.css
@@ -200,6 +200,13 @@
   background-color: white;
 }
 
+.sponsor-container::after{
+  content: '';
+  display: table;
+  clear: both;
+
+}
+
 .counter{
   width: 30%;
   height: 30%;
@@ -234,4 +241,46 @@
   float: left;
   margin-bottom: 5%;
   margin-right: 10%;
+}
+
+.footer-container{
+  width: 100%;
+  height: 500px;
+  background-color: #32495c;
+  padding-top: 50px;
+  position: relative;
+}
+
+.footer-container::after{
+  content: '';
+  display: table;
+  clear: left;
+}
+
+.menu-footer{
+  width: 20%;
+  height: 50%;
+  background-color: navy;
+  border: 2px solid white;
+  float: left;
+}
+
+.mfl{
+  margin-left: 10%
+}
+
+.mfr{
+  margin-right: 10%;
+}
+
+.credits-copy{
+  height: 40%;
+  width: 80%;
+  margin-top: 10%;
+  margin-left: 10%;
+  margin-right: 10%;
+  background-color: yellow;
+  position: absolute;
+  bottom: 0;
+
 }
